loleaflet/css/notebookbar.css
/* tabs */

.notebookbar-tabs-container {
	display: inline-flex;
}

.ui-tabs.notebookbar {
	display: inline-flex;
	z-index: 999;
	padding: 0px;
	height: 100%;
}

.ui-tab.notebookbar {
	font-size: var(--header-font-size);
	font-family: var(--oxool-font);
	line-height: normal;
	color: #fff;
	height: 24px;
	display: flex;
	align-items: center;
	padding: 0px 10px;
	border: 1px solid transparent;
	border-radius: var(--border-radius);
}

.ui-tab.notebookbar[style*='block'] {
	display: inline-flex !important;
}

.ui-tab.hidden.notebookbar {
	display: none;
}

.ui-tab.selected.notebookbar {
	color: var(--color-text-darker);
	background: var(--color-background-dark);
	border: 1px solid var(--color-border-dark);
}
.ui-tab.notebookbar:hover {
	color: var(--color-text-darker);
	background: var(--color-background-darker);
	border: 1px solid var(--color-border-darker);
	cursor: pointer;
}
/* Document Logo */
.main-nav.hasnotebookbar #document-header {
	height: 100%;
	background: transparent;
	align-items: center;
	display: flex;
}

/* grid */
.notebookbar.ui-grid {
	border-spacing: 0px;
}

/* shortcuts bar */

.notebookbar-shortcuts-bar {
	display: inline-block;
	position: relative;
	z-index: 1000;
	box-sizing: border-box;
}

.notebookbar-shortcuts-bar > table {
	display: block;
	height: 31px;
}

.notebookbar-shortcuts-bar .unotoolbutton.notebookbar .unobutton {
	width: 16px !important;
	height: 16px !important;
	margin: 0 !important;
}

.notebookbar-shortcuts-bar .notebookbar.unotoolbutton {
	height: 27px;
	width: 24px;
	display: flex;
	margin: 0px !important;
	align-items: center;
	justify-content: center;
	flex-direction: column;
}

.notebookbar-shortcuts-bar .cell.notebookbar {
	padding: 0 2px;
}

#Save.savemodified:after {
	content: '';
	display: block;
	width: 4px;
	height: 4px;
	border-radius: 20px;
	filter: none !important;
	background: var(--color-primary-lighter);
	box-shadow: 0 0 0 2px var(--color-main-background);
	border: 1px solid var(--color-primary);
	position: absolute;
	top: 6px;
	margin-left: 11px;
}

#Save1.savemodified:after {
	content: '';
	display: block;
	width: 6px;
	height: 6px;
	border-radius: 30px;
	filter: none !important;
	background: var(--color-primary-lighter);
	box-shadow: 0 0 0 2px var(--color-main-background);
	border: 1px solid var(--color-primary);
	position: absolute;
	top: 18px;
	margin-left: 28px;
}

.hasnotebookbar .notebookbar-shortcuts-bar #Menubar,
.hasnotebookbar .notebookbar-shortcuts-bar #Menubar li,
.hasnotebookbar .notebookbar-shortcuts-bar #Menubar > li > a {
	background-color: transparent;
	margin: 0px !important;
}


.hasnotebookbar .notebookbar-shortcuts-bar #Menubar > li > a {
	cursor: pointer;
	border: none;
	padding: 4px;
}

.hasnotebookbar #shortcuts-menubar-icon {
	position: absolute;
	top: 45%;
	left: 6px;
	height: 2px;
	width: 16px;
	-webkit-transition: all 0.25s;
	transition: all 0.25s;
}

/* options section */
.notebookbar-options-section {
	display: inline;
	height: 32px;
	padding: 2px;
}

/* root container */

.notebookbar-scroll-wrapper {
	overflow-x: scroll;
	overflow-y: hidden;
	scrollbar-width: none; /* Firefox >= 64 */
	overflow: -moz-scrollbars-none; /* Firefox < 64 */
	-ms-overflow-style: none;  /* Internet Explorer 10+ */
	display: flex;
	height: 72px;
	align-items: center;
}

.root-container.notebookbar {
	display: table-cell;
	vertical-align: middle;
}

.notebookbar-scroll-wrapper::-webkit-scrollbar { /* WebKit */
	width: 0;
	height: 0;
}

#toolbar-wrapper.hasnotebookbar {
	background: var(--color-background-lighter);
	position: relative;
	z-index: 11;
}

.cell.notebookbar {
	display: table-cell;
	vertical-align: middle;
	padding: 2px;
}

.row.notebookbar {
	display: table-row;
}

.vertical.notebookbar {
	width: max-content;
}

/* unobuttons */

.hasnotebookbar .ui-content .unobutton {
	width: 32px;
	height: 32px;
	margin-right: 5px;
	vertical-align: middle;
}

/* avoid bug with arrow in new line when window is small */
#table-Home-Section-Insert #table-LineB9 #InsertGraphic.notebookbar,
#table-Home-Section-Insert #table-GroupB20 #InsertTable.notebookbar {
	width: 50px;
}
#table-Home-Section-Insert #table-LineB9 #InsertGraphic.notebookbar{
	width: auto;
	margin-left: -2px;
}
#buttonbefore.notebookbar, #buttonafter.notebookbar, #buttonoptimal.notebookbar, #buttonparallel.notebookbar, #buttonnone.notebookbar, #buttonthrough.notebookbar, #bottom.notebookbar, #top.notebookbar, #standard.notebookbar, #Bold.notebookbar, #Italic.notebookbar, #Underline.notebookbar, #Strikeout.notebookbar{
	margin: 0px !important;
	padding: 0px !important;
}

.unotoolbutton.notebookbar .unobutton {
	width: 24px !important;
	height: 24px !important;
	margin-right: 0px !important;
}

.has-dropdown--color.notebookbar {
	height: 24px !important;
}

.unotoolbutton.notebookbar .unolabel {
	font-size: var(--header-font-size);
	font-family: var(--oxool-font);
	color: var(--color-main-text);
	padding: 0px 5px !important;
}

#table-HomeTab .unospan-uptoolbar:not(.disabled) {
	border-top-left-radius: 12px;
	border-bottom-left-radius: 12px;
	background: linear-gradient(to left, #e6e6e600, #e6e6e652 30%);
}
#table-HomeTab .unospan-downtoolbar:not(.disabled) {
	background: linear-gradient(to right, #e6e6e600, #e6e6e652 30%);
	border-top-right-radius: 12px;
	border-bottom-right-radius: 12px;
}
#table-HomeTab .unospan-uptoolbar:not(.disabled):hover{
	box-shadow: -2px 0 2px 2px #e6e6e6b0;
}
#table-HomeTab .unospan-downtoolbar:not(.disabled):hover{
	box-shadow: 2px 0 2px 2px #e6e6e6b0;
}
#table-HomeTab .unospan-uptoolbar img, #table-HomeTab .unospan-downtoolbar img {
	width: 18px !important;
	height: 18px !important;
	padding: 4px;
}

.unotoolbutton.notebookbar .unobutton.selected + .ui-content.unolabel {
	color: var(--color-text-dark);
}

.unotoolbutton.notebookbar.disabled:not(.unospan-shortcutstoolbox),
.mobile-wizard-widebutton.disabled,
.freemium-disabled {
	opacity: 0.65;
}

.freemium-disabled:hover {
	opacity: 1;
}
/* ... */

